# 2024-spring-AB-Python-HW-8

./: README.md  pyproject.toml
class_content/: client_api.py  domain.py  main.py  swagger_bad.yaml  swagger_good.yaml
homework/: alembic.ini  manage.py  swagger.json
homework/app/: container.py  maker.py
homework/app/domain/entities/: cart.py  product.py
homework/app/domain/services/interfaces/: __init__.py  cart.py  product.py
homework/app/infrastracture/adapter/: cart.py  product.py
homework/app/infrastracture/models/: __init__.py  base.py  models.py
homework/app/infrastracture/pg_adapter/: cart.py  product.py
homework/app/infrastructure/: __init__.py  alembic.ini  config.py
homework/app/infrastructure/adapter/: __init__.py  cart.py  exceptions.py  product.py
homework/app/infrastructure/migration/: env.py
homework/app/infrastructure/migration/versions/: 6c84ee3f4551_init.py  98d7a7a4ef49_init.py
homework/app/infrastructure/models/: __init__.py  base.py  models.py
homework/app/presentation/: cart.py  mutation.py  products.py  query.py
homework/app/presentation/rest/: handlers.py
homework/app/settings/: app.py  config.py
homework/migration/: env.py
homework/tests/: conftest.py  test_cart.py  test_products.py
seminar_materials/: alembic.ini  pyproject.toml
seminar_materials/app/: config.py
seminar_materials/app/models/: __init__.py  base.py  models.py
seminar_materials/migration/: env.py
seminar_materials/migration/versions/: 1_d6dacc7e71a4_init.py  2_752e181206d3_added_dep_worker.py
seminar_materials/run/: 1_fill_table.py  2_select.py  3_update.py  4_delete.py
