[tool.poetry]
name = "databases"
version = "0.1.0"
description = ""
authors = ["German Tarasov <g.tarasov@tinkoff.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
